--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t mike/docker-react -f Dockerfile.dev .
+  - docker build -t mike/docker-react -f Dockerfile.dev frontend/.
 
 script:
   - docker run -e CI=true mike/docker-react npm run test
